--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Ejemplo de web</title>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        
+        <h1>Proyecto empresarial</h1>
     </body>
 </html>
